# podcast_reader

./: .gitignore  CLAUDE.md  README.md  generate_chapters.py  json_to_html.py  pyproject.toml  requirements.txt  transcribe.sh  youtube_transcript.py
.github/workflows/: ci.yml  pack-diarization.yml  release.yml  test-installer.yml
app/: .gitignore  README.md  electron-builder.config.cjs  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  tsconfig.node.json  tsconfig.web.json
app/scripts/: build-icons.mjs  dist.mjs
app/src/main/: app-config.test.ts  app-config.ts  broadcast.test.ts  broadcast.ts  data-dir.test.ts  data-dir.ts  discovery.test.ts  discovery.ts  engine-client.test.ts  engine-client.ts  engine-cmd.test.ts  engine-cmd.ts  engine-manager.test.ts  engine-manager.ts  engine.test.ts  engine.ts  external-links.test.ts  external-links.ts  icon-assets.test.ts  index.ts  ipc.test.ts  ipc.ts  media-protocol.test.ts  media-protocol.ts  private-web.test.ts  private-web.ts  protocol.test.ts  protocol.ts  quit.test.ts  quit.ts  respawn-policy.test.ts  respawn-policy.ts  serve-journal.test.ts  serve-journal.ts  serve-manager.test.ts  serve-manager.ts  serve-process.test.ts  serve-process.ts  serve-status.test.ts  serve-status.ts  (+8 more)
app/src/preload/: index.ts
app/src/renderer/: index.html
app/src/shared/: ipc.ts  types.ts
app/tests/e2e/: adopt.spec.ts  artifact-geometry.spec.ts  fixtures.ts  integration.spec.ts  isolation.spec.ts  key-push.spec.ts  media.spec.ts  packs.spec.ts  protocol.spec.ts  respawn.spec.ts  views.spec.ts  web-reader.spec.ts
app/tests/install/: walkthrough.mjs
app/tests/mock-engine/: package.json  server.ts
docs/: csp-script-evolution.md  repro.md
docs/superpowers/plans/: 2026-03-24-x-video-and-packaging.md  2026-06-11-engine-extraction.md
docs/superpowers/specs/: 2026-03-24-x-video-and-packaging-design.md  2026-06-11-desktop-packaging-design.md  2026-06-13-floating-video-player-design.md  2026-06-14-engine-respawn-supervision-design.md  2026-06-14-native-app-first-impression-design.md  2026-06-14-user-defined-providers-design.md  2026-06-15-app-editorial-uplift-design.md  2026-06-15-wizard-chapter-provider-design.md  2026-07-14-android-thin-client-design.md  2026-07-14-named-custom-providers-design.md  2026-07-14-rail-density-badge-contrast-design.md  2026-07-14-tailnet-web-m1-design.md  2026-07-15-private-transcript-search-design.md  2026-07-16-desktop-library-search-design.md  2026-07-16-in-transcript-search-design.md
docs/walk-repros/: 2026-07-16-search.json  README.md
extension/: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
extension/public/: manifest.json
extension/scripts/: gen-icons.mjs  zip.mjs
extension/src/: capture.test.ts  capture.ts  client.test.ts  client.ts  connection.test.ts  connection.ts  dom.ts  etld.test.ts  etld.ts  jobs-view.test.ts  jobs-view.ts  netscape.test.ts  netscape.ts  pairing.test.ts  pairing.ts  popup.css  popup.html  popup.ts  sse.test.ts  sse.ts  storage.test.ts  storage.ts  sw.ts  tracking.ts  url-detect.test.ts  url-detect.ts
extension/tests/e2e/: connection.spec.ts  cookies.spec.ts  fixtures.ts  jobs.spec.ts  pairing.spec.ts
openspec/changes/app-editorial-uplift/: design.md  proposal.md  tasks.md
openspec/changes/chrome-extension/: design.md  proposal.md  tasks.md
openspec/changes/download-manager/: design.md  proposal.md  tasks.md
openspec/changes/electron-app/: design.md  proposal.md  tasks.md
openspec/changes/engine-extraction/: design.md  tasks.md
openspec/changes/engine-respawn-supervision/: design.md  tasks.md
openspec/changes/floating-video-player/: design.md  tasks.md
openspec/changes/multi-provider-chapters/: design.md  proposal.md  tasks.md
openspec/changes/native-app-first-impression/: design.md
openspec/changes/wizard-chapter-provider/: design.md  tasks.md
openspec/specs/app-packaging/: spec.md
packaging/: DIARIZATION_SMOKE.md  build_diarization_pack.py  build_engine.py  diarization.spec  diarization_worker_entry.py  engine.spec  engine_entry.py  frozen_smoke.py  whisper_worker_entry.py
scripts/: csp_scripts.py  measure-private-search-capacity.ps1  repro.py  walk_repros.py
spike/: .gitignore  SPIKE_REPORT.md  build.sh  engine.spec  engine_entry.py  frozen_worker.stderr  parity_diff.txt  size_breakdown.txt  worker_entry.py
spike/hooks/: hook-ctranslate2.py  hook-faster_whisper.py
spike/spike_engine/: __init__.py  app.py  worker.py
src/podcast_reader/: __init__.py  caption_cleanup.py  chapters.py  cli.py  diarize.py  html.py  pipeline.py  providers.py  tools.py  transcribe.py  types.py  youtube.py  ytdlp.py
tests/: regen_goldens.py  test_build_engine.py  test_caption_cleanup.py  test_chapters.py  test_cli.py  test_diarization_worker.py  test_diarize.py  test_generate_chapters.py  test_html.py  test_installer_walkthrough.py  test_json_to_html.py  test_pipeline.py  test_pipeline_errors.py  test_providers.py  test_repro_command.py  test_tools.py  test_transcribe.py  test_types.py  test_walk_repros.py  test_whisper_worker.py  test_youtube.py  test_youtube_transcript.py  test_ytdlp.py  test_ytdlp_video.py
tests/engine/: test_app.py  test_cookies.py  test_embed.py  test_events.py  test_hardware.py  test_jobs.py  test_jobs_restart.py  test_library.py  test_managed_tools.py  test_media.py  test_pack_manager.py  test_packs.py  test_pairing.py  test_process.py  test_rerun.py  test_script_policy.py  test_search.py  test_serve_guardian.py  test_settings.py  test_web_session.py  test_web_surface.py
tests/fixtures/: longform_whisper.json  sample_chapters.json  sample_expected.html  sample_expected_export.html  sample_expected_longform.html  sample_expected_near_hour.html  sample_expected_nochapters.html  sample_expected_search.html  sample_whisper.json
(+179 files in other folders)
