[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "podcast-reader"
version = "0.3.0"
description = "Transcribe podcast audio or YouTube/X videos to styled HTML transcripts"
requires-python = ">=3.10"
dependencies = [
    "youtube-transcript-api>=1.0",
    "yt-dlp>=2024.1.1",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "typing-extensions>=4.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Chapters are now built in (BYO API key over plain HTTP); the extra remains
# as an empty compatibility alias for existing `.[chapters]` installs.
chapters = []
whisper = [
    "whisper-ctranslate2>=0.5.7",
]
# The bundled whisper worker's in-process engine (spike pin: 1.2.1). Only the
# frozen-engine build and worker development need it; the main package never
# imports it (lazy import inside podcast_reader.workers.whisper_worker).
worker = [
    "faster-whisper>=1.2.1",
]
diarization = [
    "pyannote.audio>=4.0",
]
dev = [
    "pytest>=7.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
podcast-reader = "podcast_reader.cli:main"
# Dev/CLI analog of the frozen `whisper-worker` executable (needs the
# `worker` extra at runtime; the script itself imports without it).
podcast-reader-whisper-worker = "podcast_reader.workers.whisper_worker:main"

[tool.mypy]
strict = true

# faster-whisper ships no type stubs and is only installed via the `worker`
# extra (the worker imports it lazily); the dev environment checks the worker
# module without it.
[[tool.mypy.overrides]]
module = "faster_whisper"
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: tests that download from the internet or require external tools",
]
