[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "podcast-reader"
version = "0.3.0"
description = "Transcribe podcast audio or YouTube/X videos to styled HTML transcripts"
requires-python = ">=3.10"
dependencies = [
    "youtube-transcript-api>=1.0",
    "yt-dlp>=2024.1.1",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "typing-extensions>=4.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Chapters are now built in (BYO API key over plain HTTP); the extra remains
# as an empty compatibility alias for existing `.[chapters]` installs.
chapters = []
whisper = [
    "whisper-ctranslate2>=0.5.7",
]
# The bundled whisper worker's in-process engine (spike pin: 1.2.1). Only the
# frozen-engine build and worker development need it; the main package never
# imports it (lazy import inside podcast_reader.workers.whisper_worker).
worker = [
    "faster-whisper>=1.2.1",
]
# The diarization worker's in-process stack (spike pin: pyannote.audio 4.0.4
# + CPU torch). Only the frozen pack build and worker development need it;
# the main package never imports it (lazy import inside
# podcast_reader.workers.diarization_worker). Install torch from the CPU
# index first (see packaging/DIARIZATION_SMOKE.md) — PyPI torch is the CUDA
# build and quadruples the freeze.
diarization = [
    "pyannote.audio>=4.0",
]
dev = [
    "pytest>=7.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
podcast-reader = "podcast_reader.cli:main"
# Dev/CLI analog of the frozen `whisper-worker` executable (needs the
# `worker` extra at runtime; the script itself imports without it).
podcast-reader-whisper-worker = "podcast_reader.workers.whisper_worker:main"
# Dev/CLI analog of the frozen `diarization-worker` executable (needs the
# `diarization` extra at runtime; the script itself imports without it).
podcast-reader-diarization-worker = "podcast_reader.workers.diarization_worker:main"

[tool.mypy]
strict = true

# faster-whisper ships no type stubs and is only installed via the `worker`
# extra (the worker imports it lazily); the dev environment checks the worker
# module without it.
[[tool.mypy.overrides]]
module = "faster_whisper"
ignore_missing_imports = true

# torch and pyannote.audio are only installed in the diarization pack's build
# venv (the worker imports them lazily); the dev environment checks the
# worker module without them.
[[tool.mypy.overrides]]
module = ["torch", "pyannote.audio"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: tests that download from the internet or require external tools",
]
